--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body{
 }
 
 #mainspaceheader{
-  background-image:url('../MyPage/b2.jpg');
+  background-image:url('../PhilipYeh12/MyPage/b2.jpg');
 
 }
 #cicleface
