--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body{
 }
 
 #mainspaceheader{
-  background-image:url('../MyPage/b7.JPG');
+  background-image:url('../MyPage/b7.jpg');
   background-position: center;
   height: 235px;
   margin-bottom: 30px;
