--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body{
 }
 
 #mainspaceheader{
-  background-image:url('../MyPage/b7.jpg');
+  background-image:url('../MyPage/b9.jpg');
   background-position: center;
   height: 235px;
   margin-bottom: 30px;
@@ -60,7 +60,7 @@ body{
 }
 
 #mainspaceheader h1{
-  color:orange;
+  color:white;
   font-size: 25px;
 }
 #cicleface
