--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body{
 }
 
 .container{
-  width:80%;
+
+  width:95%;
   margin:auto;
   overflow:hidden;
 
@@ -45,7 +46,12 @@ h4{
   font-size:22px;
 }
 
-
+p4{
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  color: black;
+  padding-right: 25px;
+}
 
 
 #Main-header{
@@ -59,6 +65,7 @@ h4{
   background-color: #333;
   color:#fff;
 }
+
 #navigation u1{
 
   padding:0;
@@ -67,13 +74,16 @@ h4{
 
 #navigation li{
   display:inline;
+
 }
 #navigation a{
 
+  margin:auto;
+  overflow:hidden;
   color:#fff;
   text-decoration: none;
   font-size: 18px;
-  padding-right: 5px;
+  padding-right: 25px;
 }
 
 #mainspaceheader{
