--- a/CSS/main.css
+++ b/CSS/main.css
@@ -100,7 +100,7 @@ h4{
 }
 
 #mainspaceheader{
-  background-image:url('../MyPage/Assets/b10.jpg');
+  background-image:url('../Assets/b10.jpg');
   background-position: center;
   height: 250px;
   margin-bottom: 30px;
